//protocol=10203;
option java_package = "com.chuangyou.common.protobuf.pb.fashion";
option java_outer_classname = "FashionUnEquipReqProto";

message FashionUnEquipReqMsg{
	optional int32 fashionId = 1; // 时装ID
}