option java_package = "com.chuangyou.common.protobuf.pb.mount";
option java_outer_classname = "MountEquipBeanProto";

message MountEquipBeanMsg{
	optional int32 equipId = 1; // 装备ID
	optional int32 equipLevel = 2; // 装备等级
}